Add GPS module for NMEA compatible receivers

--- a/App.config
+++ b/App.config
@@ -173,6 +173,12 @@
       <setting name="Music_Enable" serializeAs="String">
         <value>True</value>
       </setting>
+      <setting name="GPS_Enable" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="GPS_LastGoodCOMPort" serializeAs="String">
+        <value />
+      </setting>
     </HAController.My.MySettings>
   </userSettings>
   <entityFramework>
