Leave more modules off by default
Less popups when I try to deploy this sucker!

--- a/App.config
+++ b/App.config
@@ -45,7 +45,7 @@
         <value />
       </setting>
       <setting name="Insteon_Enable" serializeAs="String">
-        <value>True</value>
+        <value>False</value>
       </setting>
       <setting name="Insteon_LastGoodCOMPort" serializeAs="String">
         <value />
@@ -60,7 +60,7 @@
         <value />
       </setting>
       <setting name="OpenWeatherMap_Enable" serializeAs="String">
-        <value>True</value>
+        <value>False</value>
       </setting>
       <setting name="Ping_Enable" serializeAs="String">
         <value>True</value>
@@ -72,7 +72,7 @@
         <value>True</value>
       </setting>
       <setting name="Mail_Enable" serializeAs="String">
-        <value>True</value>
+        <value>False</value>
       </setting>
       <setting name="Mail_SMTPHost" serializeAs="String">
         <value />
