Add GPS logging rate limit
This will probably work.

--- a/My Project/Settings.settings
+++ b/My Project/Settings.settings
@@ -149,5 +149,8 @@
     <Setting Name="GPS_LastGoodCOMPort" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="GPS_RateLimit" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
