--- a/App.config
+++ b/App.config
@@ -179,6 +179,9 @@
       <setting name="GPS_LastGoodCOMPort" serializeAs="String">
         <value />
       </setting>
+      <setting name="GPS_RateLimit" serializeAs="String">
+        <value>0</value>
+      </setting>
     </HAController.My.MySettings>
   </userSettings>
   <entityFramework>
