Upgrade settings between versions, save on changes

--- a/App.config
+++ b/App.config
@@ -182,6 +182,9 @@
       <setting name="GPS_RateLimit" serializeAs="String">
         <value>1</value>
       </setting>
+      <setting name="Global_UpgradeRequired" serializeAs="String">
+        <value>True</value>
+      </setting>
     </HAController.My.MySettings>
   </userSettings>
   <entityFramework>
