--- a/My Project/Settings.settings
+++ b/My Project/Settings.settings
@@ -152,5 +152,8 @@
     <Setting Name="GPS_RateLimit" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">1</Value>
     </Setting>
+    <Setting Name="Global_UpgradeRequired" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
