Add log archival script

--- a/HAController.vbproj
+++ b/HAController.vbproj
@@ -220,6 +220,9 @@
     <Content Include="scripts\updateupdate.bat">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="scripts\archivelog.bat">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Content Include="assets\HAController.ico">
