--- a/HAController.vbproj
+++ b/HAController.vbproj
@@ -223,6 +223,9 @@
     <Content Include="scripts\archivelog.bat">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="scripts\archivedb.bat">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Content Include="assets\HAController.ico">
