--- a/packages.config
+++ b/packages.config
@@ -1,10 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Common.Logging" version="3.3.1" targetFramework="net45" />
-  <package id="Common.Logging.Core" version="3.3.1" targetFramework="net45" />
+  <package id="Common.Logging" version="3.4.1" targetFramework="net45" />
+  <package id="Common.Logging.Core" version="3.4.1" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
   <package id="hidlibrary" version="3.2.46.0" targetFramework="net45" />
-  <package id="Quartz" version="2.5.0" targetFramework="net45" />
+  <package id="Microsoft.CSharp" version="4.4.0" targetFramework="net45" />
+  <package id="Quartz" version="2.6.0" targetFramework="net45" />
   <package id="System.Data.SQLite" version="1.0.105.2" targetFramework="net45" />
   <package id="System.Data.SQLite.Core" version="1.0.105.2" targetFramework="net45" />
   <package id="System.Data.SQLite.EF6" version="1.0.105.2" targetFramework="net45" />
