Add scanmusic script to launch WMP
So far the best way I've found to do this, sadly.

--- a/HAController.vbproj
+++ b/HAController.vbproj
@@ -224,6 +224,9 @@
     <Content Include="scripts\archivedb.bat">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="scripts\scanmusic.bat">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Content Include="assets\HAController.ico">
