Initial commit of MapQuest API

--- a/App.config
+++ b/App.config
@@ -185,6 +185,12 @@
       <setting name="Global_UpgradeRequired" serializeAs="String">
         <value>True</value>
       </setting>
+      <setting name="MapQuest_Enable" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="MapQuest_APIKey" serializeAs="String">
+        <value />
+      </setting>
     </HAController.My.MySettings>
   </userSettings>
   <entityFramework>
