Add default address setting, make directions query use it

--- a/App.config
+++ b/App.config
@@ -191,6 +191,9 @@
       <setting name="MapQuest_APIKey" serializeAs="String">
         <value />
       </setting>
+      <setting name="GPS_DefaultAddress" serializeAs="String">
+        <value />
+      </setting>
     </HAController.My.MySettings>
   </userSettings>
   <entityFramework>
