--- a/My Project/Settings.settings
+++ b/My Project/Settings.settings
@@ -161,5 +161,8 @@
     <Setting Name="MapQuest_APIKey" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="GPS_DefaultAddress" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
