Add modWolframAlpha to query knowledge
Shockingly simple to implement this.

--- a/App.config
+++ b/App.config
@@ -194,6 +194,12 @@
       <setting name="GPS_DefaultAddress" serializeAs="String">
         <value />
       </setting>
+      <setting name="WolframAlpha_Enable" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="WolframAlpha_APIKey" serializeAs="String">
+        <value />
+      </setting>
     </HAController.My.MySettings>
   </userSettings>
   <entityFramework>
