--- a/My Project/Settings.settings
+++ b/My Project/Settings.settings
@@ -164,5 +164,11 @@
     <Setting Name="GPS_DefaultAddress" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="WolframAlpha_Enable" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="WolframAlpha_APIKey" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
