--- a/HAController.vbproj
+++ b/HAController.vbproj
@@ -162,6 +162,7 @@
     <Compile Include="modSpeech.vb" />
     <Compile Include="modMatrixLCD.vb" />
     <Compile Include="modMusic.vb" />
+    <Compile Include="modWolframAlpha.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
