--- a/packages.config
+++ b/packages.config
@@ -7,7 +7,7 @@
   <package id="Microsoft.CSharp" version="4.4.1" targetFramework="net45" />
   <package id="Quartz" version="2.6.1" targetFramework="net45" />
   <package id="System.Data.SQLite" version="1.0.106.0" targetFramework="net45" />
-  <package id="System.Data.SQLite.Core" version="1.0.106.0" targetFramework="net45" />
-  <package id="System.Data.SQLite.EF6" version="1.0.106.0" targetFramework="net45" />
-  <package id="System.Data.SQLite.Linq" version="1.0.106.0" targetFramework="net45" />
+  <package id="System.Data.SQLite.Core" version="1.0.106.0" targetFramework="net45" requireReinstallation="true" />
+  <package id="System.Data.SQLite.EF6" version="1.0.106.0" targetFramework="net45" requireReinstallation="true" />
+  <package id="System.Data.SQLite.Linq" version="1.0.106.0" targetFramework="net45" requireReinstallation="true" />
 </packages>
