Upgrade Quartz.NET to 3.0
We'll see if this even works!

--- a/packages.config
+++ b/packages.config
@@ -1,13 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Common.Logging" version="3.4.1" targetFramework="net45" />
-  <package id="Common.Logging.Core" version="3.4.1" targetFramework="net45" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net45" />
   <package id="hidlibrary" version="3.2.46.0" targetFramework="net45" />
-  <package id="Microsoft.CSharp" version="4.4.1" targetFramework="net45" />
-  <package id="Quartz" version="2.6.1" targetFramework="net45" />
-  <package id="System.Data.SQLite" version="1.0.106.0" targetFramework="net45" />
-  <package id="System.Data.SQLite.Core" version="1.0.106.0" targetFramework="net45" requireReinstallation="true" />
-  <package id="System.Data.SQLite.EF6" version="1.0.106.0" targetFramework="net45" requireReinstallation="true" />
-  <package id="System.Data.SQLite.Linq" version="1.0.106.0" targetFramework="net45" requireReinstallation="true" />
+  <package id="Quartz" version="3.0.0" targetFramework="net452" />
+  <package id="System.Data.SQLite" version="1.0.106.0" targetFramework="net452" />
+  <package id="System.Data.SQLite.Core" version="1.0.106.0" targetFramework="net452" />
+  <package id="System.Data.SQLite.EF6" version="1.0.106.0" targetFramework="net452" />
+  <package id="System.Data.SQLite.Linq" version="1.0.106.0" targetFramework="net452" />
 </packages>
