Change file path settings to application scope

--- a/App.config
+++ b/App.config
@@ -6,6 +6,9 @@
     </sectionGroup>
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="HAController.My.MySettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    </sectionGroup>
   </configSections>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
@@ -32,9 +35,6 @@
   </system.diagnostics>
   <userSettings>
     <HAController.My.MySettings>
-      <setting name="Database_FileURI" serializeAs="String">
-        <value>C:\HAC\HACdb.sqlite</value>
-      </setting>
       <setting name="Global_LastHomeStatus" serializeAs="String">
         <value />
       </setting>
@@ -130,9 +130,6 @@
       </setting>
       <setting name="Global_Experimental" serializeAs="String">
         <value>False</value>
-      </setting>
-      <setting name="Global_LogFileURI" serializeAs="String">
-        <value>C:\HAC\HAClog.txt</value>
       </setting>
       <setting name="Global_CarMode" serializeAs="String">
         <value>False</value>
@@ -231,4 +228,14 @@
       <remove invariant="System.Data.SQLite.EF6" />
       <add name="SQLite Data Provider (Entity Framework 6)" invariant="System.Data.SQLite.EF6" description=".NET Framework Data Provider for SQLite (Entity Framework 6)" type="System.Data.SQLite.EF6.SQLiteProviderFactory, System.Data.SQLite.EF6" />
     <remove invariant="System.Data.SQLite" /><add name="SQLite Data Provider" invariant="System.Data.SQLite" description=".NET Framework Data Provider for SQLite" type="System.Data.SQLite.SQLiteFactory, System.Data.SQLite" /></DbProviderFactories>
-  </system.data></configuration>
+  </system.data><applicationSettings>
+    <HAController.My.MySettings>
+      <setting name="Database_FileURI" serializeAs="String">
+        <value>C:\HAC\HACdb.sqlite</value>
+      </setting>
+      <setting name="Global_LogFileURI" serializeAs="String">
+        <value>C:\HAC\HAClog.txt</value>
+      </setting>
+    </HAController.My.MySettings>
+  </applicationSettings>
+</configuration>
