--- a/My Project/Settings.settings
+++ b/My Project/Settings.settings
@@ -2,7 +2,7 @@
 <SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="My" GeneratedClassName="MySettings" UseMySettingsClassName="true">
   <Profiles />
   <Settings>
-    <Setting Name="Database_FileURI" Type="System.String" Scope="User">
+    <Setting Name="Database_FileURI" Type="System.String" Scope="Application">
       <Value Profile="(Default)">C:\HAC\HACdb.sqlite</Value>
     </Setting>
     <Setting Name="Global_LastHomeStatus" Type="System.String" Scope="User">
@@ -101,7 +101,7 @@
     <Setting Name="Global_Experimental" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
-    <Setting Name="Global_LogFileURI" Type="System.String" Scope="User">
+    <Setting Name="Global_LogFileURI" Type="System.String" Scope="Application">
       <Value Profile="(Default)">C:\HAC\HAClog.txt</Value>
     </Setting>
     <Setting Name="Global_CarMode" Type="System.Boolean" Scope="User">
