Move update URLs to application settings

--- a/App.config
+++ b/App.config
@@ -236,6 +236,12 @@
       <setting name="Global_LogFileURI" serializeAs="String">
         <value>C:\HAC\HAClog.txt</value>
       </setting>
+      <setting name="Global_UpdateCheckURI" serializeAs="String">
+        <value>https://hac.jacobweisz.com/dl/current.txt</value>
+      </setting>
+      <setting name="Global_UpdateFileURI" serializeAs="String">
+        <value>https://hac.jacobweisz.com/dl/update.zip</value>
+      </setting>
     </HAController.My.MySettings>
   </applicationSettings>
 </configuration>
