Get real Windows version and "show winver"

--- a/HAController.vbproj
+++ b/HAController.vbproj
@@ -113,6 +113,7 @@
     <Reference Include="System.Deployment" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.IO.Compression.FileSystem" />
+    <Reference Include="System.Management" />
     <Reference Include="System.Runtime.Remoting" />
     <Reference Include="System.Speech" />
     <Reference Include="System.Web.Extensions" />
