--- a/HAController.vbproj
+++ b/HAController.vbproj
@@ -226,6 +226,9 @@
     <Content Include="scripts\updateoverwrite.bat">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="scripts\removeoldfiles.bat">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Content Include="assets\HAController.ico">
