--- a/HAController.vbproj
+++ b/HAController.vbproj
@@ -193,6 +193,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="HAController_TemporaryKey.pfx" />
+    <None Include="My Project\app.manifest" />
     <None Include="My Project\Application.myapp">
       <Generator>MyApplicationCodeGenerator</Generator>
       <LastGenOutput>Application.Designer.vb</LastGenOutput>
