Add "on startup" command

--- a/App.config
+++ b/App.config
@@ -197,6 +197,9 @@
       <setting name="WolframAlpha_APIKey" serializeAs="String">
         <value />
       </setting>
+      <setting name="Global_StartupCommand" serializeAs="String">
+        <value />
+      </setting>
     </HAController.My.MySettings>
   </userSettings>
   <entityFramework>
