--- a/App.config
+++ b/App.config
@@ -241,6 +241,9 @@
       </setting>
     </HAController.My.MySettings>
   </applicationSettings>
+  <appSettings>
+    <add key="EnableWindowsFormsHighDpiAutoResizing" value="true"/>
+  </appSettings>
   <system.data>
     <DbProviderFactories>
       <remove invariant="System.Data.SQLite.EF6" />
