Add command line argument detection

--- a/HAController.vbproj
+++ b/HAController.vbproj
@@ -137,6 +137,7 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ApplicationEvents.vb" />
     <Compile Include="clsDevices.vb" />
     <Compile Include="Form1.vb">
       <SubType>Form</SubType>
