MatrixLCD: Hold notifications longer

--- a/My Project/Settings.settings
+++ b/My Project/Settings.settings
@@ -179,5 +179,8 @@
     <Setting Name="Global_StartupCommand" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="MatrixLCD_ToastHoldTime" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">3</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
