--- a/App.config
+++ b/App.config
@@ -200,6 +200,9 @@
       <setting name="Global_StartupCommand" serializeAs="String">
         <value />
       </setting>
+      <setting name="MatrixLCD_ToastHoldTime" serializeAs="String">
+        <value>3</value>
+      </setting>
     </HAController.My.MySettings>
   </userSettings>
   <entityFramework>
