Add reading/display 2nd thermostat
So I can see the temperature both places!

--- a/App.config
+++ b/App.config
@@ -203,6 +203,12 @@
       <setting name="MatrixLCD_ToastHoldTime" serializeAs="String">
         <value>3</value>
       </setting>
+      <setting name="Insteon_ThermostatSlaveAddr" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="Global_LastKnownInsideTemp2nd" serializeAs="String">
+        <value>0</value>
+      </setting>
     </HAController.My.MySettings>
   </userSettings>
   <entityFramework>
