Set default POP/SMTP mail ports
No need to ask for these, we really only support one set right now.

--- a/App.config
+++ b/App.config
@@ -78,7 +78,7 @@
         <value />
       </setting>
       <setting name="Mail_SMTPPort" serializeAs="String">
-        <value />
+        <value>587</value>
       </setting>
       <setting name="Mail_To" serializeAs="String">
         <value />
@@ -108,7 +108,7 @@
         <value />
       </setting>
       <setting name="Mail_POPPort" serializeAs="String">
-        <value />
+        <value>995</value>
       </setting>
       <setting name="Mail_CmdWhitelist" serializeAs="String">
         <value />
