Initial IMAP support
Doesn't currently delete messages and will probably fail if one isn't available.

--- a/App.config
+++ b/App.config
@@ -209,6 +209,15 @@
       <setting name="Global_LastKnownInsideTemp2nd" serializeAs="String">
         <value>0</value>
       </setting>
+      <setting name="Mail_IMAPMode" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="Mail_IMAPHost" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="Mail_IMAPPort" serializeAs="String">
+        <value>993</value>
+      </setting>
     </HAController.My.MySettings>
   </userSettings>
   <entityFramework>
